Write lesson for function docstrings

--- a/beginner/functions/function_documentation_strings/lesson_settings.json
+++ b/beginner/functions/function_documentation_strings/lesson_settings.json
@@ -1,5 +1,5 @@
 {
-  "lesson_title": "User Defined Functions",
+  "lesson_title": "Function Documentation Strings",
   "chapter_number": 8,
   "lesson_number": 0,
   "id": "",
